# Decentralized_Shamir

./: Cargo.toml  LICENSE  README.md
axclient/: Cargo.toml
axclient/pkg/: axclient.d.ts  axclient_bg.wasm.d.ts  package.json
client/pkg/: axclient.js  axclient_bg.wasm
client/src/: lib.rs
secrete_sharing/: Cargo.toml
secrete_sharing/src/: lib.rs
secrete_sharing/src/curves/curves_core/: curve_arithmetics.rs
secrete_sharing/src/encryption/: mod.rs
secrete_sharing/src/encryption/crypto_core/: crypto_interface.rs  mod.rs
secrete_sharing/src/fields/: mod.rs
secrete_sharing/src/fields/fields_core/: arithmetic.rs  builders.rs  exponent.rs  hashs.rs  mod.rs  prime_fields.rs
secrete_sharing/src/shamir/: mod.rs
secrete_sharing/src/shamir/shamir_core/: core.rs
server/src/authentication_opaque/: cipher_suite.rs  my_err.rs
server/src/authorization_jwt/: auth.rs
server/src/entities/: admin_credentials.rs  commission_shares.rs  commissions.rs  db.rs  marche_tokens.rs  mod.rs  notifications.rs  server_info.rs  users.rs
server/src/handlers/: auth_handlers.rs  public_document.rs  shamir.rs
server/static/emails/: marche_invitation.html
server/static/html/: admin_dash.html  change_password.html  index.html  login.html
server/static/html/pass_recovers/: pass_recovery.html  reset_password.html  verify_code.html
server/tests/: db_connection.rs
server/wasm_interface/: Cargo.toml  reconstruction.html  yakhdam.html
server/wasm_interface/css/: styles.css
server/wasm_interface/scripts/: files.js  scripts.js
server/wasm_interface/src/: lib.rs
shamir_app/: Cargo.toml
shamir_app/src/: main.rs
src/: main.rs
src/authentication_opaque/: data_interface.rs  mod.rs  opaque_server.rs
src/entities/: commission_members.rs  documents.rs  marche_events.rs  reconstruction_acceptances.rs  user_keys.rs
src/handlers/: commissions_handlers.rs  marche_handlers.rs  mod.rs  notifications_handlers.rs
static/emails/: commission_invitation.html  reconstruction_invitation.html
static/html/: dash.html  register.html  registration_success.html
wasm_interface/: Cargo.toml  demo.html  encryption.html  reconstruction.html  sharing.html  test.html
wasm_interface/html/: encryption.html  reconstruction.html  scripts.js  sharing.html  styles.css
wasm_interface/pkg/: wasm_interface.d.ts  wasm_interface.js  wasm_interface_bg.wasm  wasm_interface_bg.wasm.d.ts
wasm_interface/scripts/: core.js  scripts.js
wasm_interface/src/: lib.rs
