[package]
name = "axserver"
version = "0.1.0"
edition = "2021"


[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
futures = "0.3"

# Web framework
axum = { version = "0.8.1", features = ["macros", "ws", "json", "tokio", "tracing", "multipart"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
tower-http = { version = "0.6.1", features = ["fs","cors"] }
axum-server = "0.7.1"
tracing = "0.1"

# Cryptography & security
opaque-ke = { version = "3.0.0-pre.2", default-features = false, features = ["ristretto255-voprf", "argon2"] }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
bcrypt = "0.17.0"
jsonwebtoken = "9.2.0"

# Database
sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-schema = "0.16"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls"] }

validator_derive = "0.14"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = { version = "0.21", features = ["alloc"] }

# Utilities
chrono = "0.4"
time = "0.3"
rand = "0.8"
dotenvy = "0.15"
lettre = "0.11"
hyper = "1.5.1" 

# UUID
uuid = { version = "1.3", features = ["v4"] }
thiserror = "1.0"
scopeguard = "1.2.0"
log = "0.4.27"
tokio-tungstenite = "0.26.2"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4"  # For global configuration
secrete_sharing = { path = "Decentralized_Shamir-main/secrete_sharing" }
ark-ff = "0.5.0"
redis = { version = "0.23", features = ["tokio-comp"] }
bb8 = "0.8" 
bb8-redis = "0.14"
headers = "0.4.0"
bytes = "1.10.1"

[dev-dependencies]
cargo-watch = "8.5.3"
