[package]
name = "axclient"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"      # For Base64 encoding
wasm-bindgen = "0.2" # For WebAssembly bindings
opaque-ke = { version = "3.0.0-pre.2", default-features = false, features = ["ristretto255-voprf", "argon2"] }
rand = { version = "0.8", default-features = false, features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
wasm-bindgen-futures = "0.4.48"
web-sys = { version = "0.3.75", features = ["console"] }
